--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/index.html">Philisizwe Kuzwayo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/gallery.html">Gallery</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </div>
+          </div>
+        </div>
+    </nav>
+
+    <footer>
+        Created by 
+        <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
+        , hosted on 
+        <a href="https://dancing-vacherin-25e4be.netlify.app/">Netlify</a>
+        , and is open-sourced on 
+        <a href="https://github.com/PKuzi01/practice-portfolio">Github</a>
+    </footer>
 </body>
 </html>
