--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Portfolio - Philisizwe Kuzwayo</title>
     <meta name="description" content="A practice portfolio built by Philisizwe Kuzwayo for the SheCodes Responsive Workshop final project">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -15,24 +16,80 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top text">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Philisizwe Kuzwayo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <a class="navbar-brand text" href="/index.html">Philisizwe Kuzwayo</a>
+          <button class="navbar-toggler text" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon text"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link" href="/about.html">About</a>
-              <a class="nav-link" href="/gallery.html">Gallery</a>
-              <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link text" href="/index.html">Home</a>
+              <a class="nav-link text" href="/about.html">About</a>
+              <a class="nav-link text" href="/gallery.html">Gallery</a>
+              <a class="nav-link text" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
     </nav>
 
-    <footer>
+    <div class="intro">
+        <h1 class="text">
+            Hi.
+            <br>
+            My name is <span class="underline">Philisizwe Kuzwayo</span>.
+            <br>
+            I do my make up and take pictures.
+             <span class="underline">All in good fun</span>.
+            <br>
+            <br>
+            So I made a portfolio about it.
+        </h1>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5">
+                <img src="/images/04.jpg" alt="It's a-me." class="img-fluid rounded">
+            </div>
+            <div class="col-sm-7 mt-3">
+                <h3 class="text">
+                    Oddly narcisstic.
+                </h3>
+                <p class="text">
+                   I do the makeup because I think of my face as a canvas. I like to paint, so interpreting the make up in this way has made it more fun.
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-sm-5">
+                <img src="/images/13.jpg" alt="I'm the only model I have." class="img-fluid rounded">
+            </div>
+            <div class="col-sm-7 mt-3">
+                <h3 class="text">
+                    Wildly confident.
+                </h3>
+                <p class="text">
+                    Without the need to become an idealised version of something society is used to seeing, it's given me more freedom to try and explore. Doing this has given me more freedom to explore what I can do, with the make up and the camera.
+                </p>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-sm-5">
+                <img src="/images/15.jpg" alt="I do this when I'm bored." class="img-fluid rounded">
+            </div>
+            <div class="col-sm-7 mt-3">
+                <h3 class="text">
+                    A great way to start things off.
+                </h3>
+                <p class="text">
+                    Although I've been doing this for while, colour edits still give me the creeps. I love a good black and white edit. I love the allure, the myster, how quiet it makes picture feel. So out of familiarity, I use it often. ANd it's always a different black and white edit for every set that I do. Keeps me on my toes.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer class="text
+    text-center m-5">
         Created by 
         <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
         , hosted on 
