Styling + response on About and fixes on other pages for consistent theme

--- a/contact.html
+++ b/contact.html
@@ -16,24 +16,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Philisizwe Kuzwayo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link" href="/about.html">About</a>
-              <a class="nav-link" href="/gallery.html">Gallery</a>
-              <a class="nav-link" href="/contact.html">Contact</a>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top text">
+    <div class="container-fluid">
+      <a class="navbar-brand text" href="/index.html">Philisizwe Kuzwayo</a>
+      <button class="navbar-toggler text" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon text"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-link text" href="/index.html">Home</a>
+          <a class="nav-link text" href="/about.html">About</a>
+          <a class="nav-link text" href="/gallery.html">Gallery</a>
+          <a class="nav-link text" href="/contact.html">Contact</a>
         </div>
-    </nav>
+      </div>
+    </div>
+</nav>
 
-    <footer>
+    <footer class="text
+    text-center m-5">
         Created by 
         <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
         , hosted on 
