--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-5">
-                <img src="/images/04.jpg" alt="It's a-me." class="img-fluid rounded">
+                <img src="/images/04.jpg" alt="It's a-me." class="img-fluid rounded" width="350">
             </div>
             <div class="col-sm-7 mt-3">
-                <h3 class="text">
+                <h2 class="text">
                     Oddly narcisstic.
-                </h3>
+                </h2>
                 <p class="text">
                    I do the makeup because I think of my face as a canvas. I like to paint, so interpreting the make up in this way has made it more fun.
             </div>
         </div>
         <div class="row mt-5">
             <div class="col-sm-5">
-                <img src="/images/13.jpg" alt="I'm the only model I have." class="img-fluid rounded">
+                <img src="/images/13.jpg" alt="I'm the only model I have." class="img-fluid rounded" width="350">
             </div>
             <div class="col-sm-7 mt-3">
-                <h3 class="text">
+                <h2 class="text">
                     Wildly confident.
-                </h3>
+                </h2>
                 <p class="text">
                     Without the need to become an idealised version of something society is used to seeing, it's given me more freedom to try and explore. Doing this has given me more freedom to explore what I can do, with the make up and the camera.
                 </p>
@@ -75,12 +75,12 @@
         </div>
         <div class="row mt-5">
             <div class="col-sm-5">
-                <img src="/images/15.jpg" alt="I do this when I'm bored." class="img-fluid rounded">
+                <img src="/images/15.jpg" alt="I do this when I'm bored." class="img-fluid rounded" width="350">
             </div>
             <div class="col-sm-7 mt-3">
-                <h3 class="text">
+                <h2 class="text">
                     A great way to start things off.
-                </h3>
+                </h2>
                 <p class="text">
                     Although I've been doing this for while, colour edits still give me the creeps. I love a good black and white edit. I love the allure, the myster, how quiet it makes picture feel. So out of familiarity, I use it often. ANd it's always a different black and white edit for every set that I do. Keeps me on my toes.
                 </p>
