Gallery page styled + fixes in about

--- a/about.html
+++ b/about.html
@@ -33,7 +33,9 @@
     </div>
 </nav>
 
-    <h1 class="text intro">Here's a little about me.</h1>
+    <h1 class="text intro">
+      Here's a little <span class="underline">about me</span>.
+    </h1>
     
     <div class="container">
       <div class="row">
@@ -48,7 +50,7 @@
     </div>
 
     <h1 class="text intro">
-      Still curious?
+      Still <span class="underline">curious</span> ?
       <br>
       Alright. Here's a bit more.
     </h1>
