--- a/gallery.html
+++ b/gallery.html
@@ -33,14 +33,105 @@
     </div>
 </nav>
 
-    <footer class="text
-    text-center m-5">
-        Created by 
-        <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
-        , hosted on 
-        <a href="https://dancing-vacherin-25e4be.netlify.app/">Netlify</a>
-        , and is open-sourced on 
-        <a href="https://github.com/PKuzi01/practice-portfolio">Github</a>
-    </footer>
+<h1 class="text intro">
+  Welcome to my <span class="underline">gallery</span>.
+  <br>
+  Hope you like it.
+</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="./images/23.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/06.JPG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/15.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <img src="./images/09.jpeg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/10.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/13.jpg" alt="girl" class="img-fluid rounded
+      img-transform" width="300"/>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <img src="./images/21.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/19.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/22.jpg" alt="girl" class="img-fluid rounded
+      img-transform" width="300"/>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <img src="./images/04.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/05.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/20.jpg" alt="girl" class="img-fluid rounded
+      img-transform" width="300"/>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <img src="./images/14.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/07.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/16.jpeg" alt="girl" class="img-fluid rounded
+      img-transform" width="300"/>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <img src="./images/02.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/01.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/12.jpg" alt="girl" class="img-fluid rounded
+      img-transform" width="300"/>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <img src="./images/08.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/03.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+    </div>
+    <div class="col-sm-4">
+      <img src="./images/11.jpg" alt="girl" class="img-fluid rounded
+      img-transform" width="300"/>
+    </div>
+  </div>
+</div>
+
+<footer class="text
+text-center m-5">
+    Created by 
+    <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
+    , hosted on 
+    <a href="https://dancing-vacherin-25e4be.netlify.app/">Netlify</a>
+    , and is open-sourced on 
+    <a href="https://github.com/PKuzi01/practice-portfolio">Github</a>
+</footer>
 </body>
 </html>
