Completed contact + fixes on other pages for consistency

--- a/contact.html
+++ b/contact.html
@@ -31,16 +31,42 @@
         </div>
       </div>
     </div>
-</nav>
+  </nav>
 
-    <footer class="text
-    text-center m-5">
-        Created by 
-        <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
-        , hosted on 
-        <a href="https://dancing-vacherin-25e4be.netlify.app/">Netlify</a>
-        , and is open-sourced on 
-        <a href="https://github.com/PKuzi01/practice-portfolio">Github</a>
-    </footer>
+  <h1 class="intro text">
+    I hope we get to <span class="under">work together</span>.
+    <br>
+    If you're looking for me, you can <span class="underline">find me </span> at these places.
+    <br>
+    Until then, <span class="underline">don't be a stranger</span>.
+  </h1>
+
+  <div class="contact text text-center">
+    <div class="email">
+      <span class="underline">Email:</span>
+      <br>
+      <a href="mailto:#">phila@kuzi.com</a>
+    </div>
+    <div class="phone">
+      <span class="underline">Phone:</span>
+      <br>
+      <a href="tel:#">+270110110110</a>
+    </div>
+    <div class="twitter">
+      <span class="underline">Twitter:</span>
+      <br>
+      <a href="#">@NoneOfTheseContactsAreReal</a>
+    </div>
+  </div>
+
+  <footer class="text
+  text-center m-5">
+      Created by 
+      <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
+      , hosted on 
+      <a href="https://dancing-vacherin-25e4be.netlify.app/">Netlify</a>
+      , and is open-sourced on 
+      <a href="https://github.com/PKuzi01/practice-portfolio">Github</a>
+  </footer>
 </body>
 </html>
