--- a/index.html
+++ b/index.html
@@ -33,19 +33,17 @@
         </div>
     </nav>
 
-    <div class="intro">
-        <h1 class="text">
-            Hi.
-            <br>
-            My name is <span class="underline">Philisizwe Kuzwayo</span>.
-            <br>
-            I do my make up and take pictures.
-             <span class="underline">All in good fun</span>.
-            <br>
-            <br>
-            So I made a portfolio about it.
-        </h1>
-    </div>
+    <h1 class="text intro">
+        Hi.
+        <br>
+        My name is <span class="underline">Philisizwe Kuzwayo</span>.
+        <br>
+        I do my make up and take pictures.
+            <span class="underline">All in good fun</span>.
+        <br>
+        <br>
+        So I made a portfolio about it.
+    </h1>
 
     <div class="container">
         <div class="row">
