Hiding image in phone response

--- a/about.html
+++ b/about.html
@@ -40,10 +40,9 @@
   <div class="container">
     <div class="row">
       <div class="col-7">
-        
-        <p class="text">My favourite colour is green, and I love the multiples of three. I like to paint, write, read, watch anime and play video grames (wasd supremacy 4eva). My favourite thing to do is hang out iwth my wonderful dog, Jazz on some afternoons just before sunset. I have three fish as well. And if i hear about the 'water is wet' argument ONE MORE TIME-</p>
+        <p class="text description-parag">My favourite colour is green, and I love the multiples of three. I like to paint, write, read, watch anime and play video grames (wasd supremacy 4eva). My favourite thing to do is hang out with my wonderful dog, Jazz on some afternoons just before sunset. I have three fish as well. And if i hear about the 'water is wet' argument ONE MORE TIME-</p>
       </div>
-      <div class="col-5">
+      <div class="col-5 description-image">
         <img src="./images/profile.jpg" alt="profile" class="img-fluid rounded" width="300">
       </div>
     </div>
