Added animation to the pages

--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
     </div>
   </nav>
 
-  <h1 class="text intro">
+  <h1 class="text intro animate__animated animate__fadeInLeft">
     Here's a little <span class="underline">about me</span>.
   </h1>
     
-  <div class="container description">
+  <div class="container animate__animated animate__fadeInUp">
     <div class="row">
       <div class="col-sm-5">
         <img src="./images/profile.jpg" alt="profile" class="img-fluid rounded about-img" width="300">
@@ -49,13 +49,13 @@
     </div>
   </div>
 
-  <h1 class="text intro">
+  <h1 class="text intro animate__animated animate__fadeInLeft">
     Still <span class="underline">curious</span> ?
     <br>
     Alright. Here's a bit more.
   </h1>
 
-  <div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion accordion-flush animate__animated animate__fadeInUp" id="accordionFlushExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed text-white" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
