--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     </div>
   </nav>
 
-  <h1 class="intro text">
+  <h1 class="intro text animate__animated animate__fadeInLeft">
     I hope we get to <span class="under">work together</span>.
     <br>
     If you're looking for me, you can <span class="underline">find me </span> at these places.
@@ -41,7 +41,7 @@
     Until then, <span class="underline">don't be a stranger</span>.
   </h1>
 
-  <div class="contact text text-center">
+  <div class="contact text text-center animate__animated animate__fadeInUp">
     <div class="email">
       <span class="underline">Email:</span>
       <br>
