--- a/gallery.html
+++ b/gallery.html
@@ -33,13 +33,13 @@
     </div>
   </nav>
 
-  <h1 class="text intro">
+  <h1 class="text intro animate__animated animate__fadeInLeft">
     Welcome to my <span class="underline">gallery</span>.
     <br>
     Hope you like it.
   </h1>
 
-  <div class="container">
+  <div class="container animate__animated animate__fadeInUp">
     <div class="row">
       <div class="col-sm-4">
         <img src="./images/23.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
