--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <h1 class="text intro">
+    <h1 class="text intro animate__animated animate__fadeInLeft">
         Hi.
         <br>
         My name is <span class="underline">Philisizwe Kuzwayo</span>.
@@ -45,7 +45,7 @@
         So I made a portfolio about it.
     </h1>
 
-    <div class="container">
+    <div class="container animate__animated animate__fadeInUp">
         <div class="row">
             <div class="col-sm-5">
                 <img src="/images/04.jpg" alt="It's a-me." class="img-fluid rounded" width="350">
