--- a/about.html
+++ b/about.html
@@ -138,14 +138,14 @@
     </div>
   </div>
 
-  <footer class="text
+  <<footer class="text
   text-center m-5">
       Created by 
-      <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
+      <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/" target="_blank">Philisizwe Kuzwayo</a>
       , hosted on 
-      <a href="https://dancing-vacherin-25e4be.netlify.app/">Netlify</a>
+      <a href="https://dancing-vacherin-25e4be.netlify.app/" target="_blank">Netlify</a>
       , and is open-sourced on 
-      <a href="https://github.com/PKuzi01/practice-portfolio">Github</a>
+      <a href="https://github.com/PKuzi01/practice-portfolio" target="_blank">Github</a>
   </footer>
 </body>
 </html>
