--- a/contact.html
+++ b/contact.html
@@ -60,13 +60,13 @@
   </div>
 
   <footer class="text
-  text-center m-5">
-      Created by 
-      <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/">Philisizwe Kuzwayo</a>
-      , hosted on 
-      <a href="https://dancing-vacherin-25e4be.netlify.app/">Netlify</a>
-      , and is open-sourced on 
-      <a href="https://github.com/PKuzi01/practice-portfolio">Github</a>
-  </footer>
+    text-center m-5">
+        Created by 
+        <a href="https://www.linkedin.com/in/philisizwe-kuzwayo-3116541a8/" target="_blank">Philisizwe Kuzwayo</a>
+        , hosted on 
+        <a href="https://dancing-vacherin-25e4be.netlify.app/" target="_blank">Netlify</a>
+        , and is open-sourced on 
+        <a href="https://github.com/PKuzi01/practice-portfolio" target="_blank">Github</a>
+    </footer>
 </body>
 </html>
