Replacing image files with links

--- a/gallery.html
+++ b/gallery.html
@@ -42,83 +42,83 @@
   <div class="container animate__animated animate__fadeInUp">
     <div class="row">
       <div class="col-sm-4">
-        <img src="./images/23.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/248/original/23.jpg?1682106440" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/06.JPG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/232/original/06.JPG?1682105681" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/15.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/241/original/15.jpg?1682106154" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
     <div class="row mt-5">
       <div class="col-sm-4">
-        <img src="./images/09.jpeg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/235/original/09.jpeg?1682105760" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/10.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/236/original/10.JPEG?1682105813" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/13.jpg" alt="girl" class="img-fluid rounded
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/239/original/13.jpg?1682106015" alt="girl" class="img-fluid rounded
         img-transform" width="300"/>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-sm-4">
-        <img src="./images/21.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/246/original/21.jpg?1682106368" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/19.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/244/original/19.jpg?1682106303" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/22.jpg" alt="girl" class="img-fluid rounded
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/247/original/22.jpg?1682106399" alt="girl" class="img-fluid rounded
         img-transform" width="300"/>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-sm-4">
-        <img src="./images/04.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/230/original/04.jpg?1682105591" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/05.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/231/original/05.JPEG?1682105635" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/20.jpg" alt="girl" class="img-fluid rounded
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/245/original/20.jpg?1682106332" alt="girl" class="img-fluid rounded
         img-transform" width="300"/>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-sm-4">
-        <img src="./images/14.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/240/original/14.jpg?1682106100" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/07.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/233/original/07.JPEG?1682105710" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/16.jpeg" alt="girl" class="img-fluid rounded
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/242/original/16.jpeg?1682106214" alt="girl" class="img-fluid rounded
         img-transform" width="300"/>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-sm-4">
-        <img src="./images/02.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/228/original/02.jpg?1682105230" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/01.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/227/original/01.jpg?1682105211" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/12.jpg" alt="girl" class="img-fluid rounded
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/238/original/12.jpg?1682105922" alt="girl" class="img-fluid rounded
         img-transform" width="300"/>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-sm-4">
-        <img src="./images/08.JPEG" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/234/original/08.JPEG?1682105741" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/03.jpg" alt="girl" class="img-fluid rounded img-transform" width="300"/>
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/229/original/03.jpg?1682105525" alt="girl" class="img-fluid rounded img-transform" width="300"/>
       </div>
       <div class="col-sm-4">
-        <img src="./images/11.jpg" alt="girl" class="img-fluid rounded
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/237/original/11.jpg?1682105836" alt="girl" class="img-fluid rounded
         img-transform" width="300"/>
       </div>
     </div>
