--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container animate__animated animate__fadeInUp">
         <div class="row">
             <div class="col-sm-5">
-                <img src="/images/04.jpg" alt="It's a-me." class="img-fluid rounded" width="350">
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/230/original/04.jpg?1682105591" alt="It's a-me." class="img-fluid rounded" width="350">
             </div>
             <div class="col-sm-7 mt-3">
                 <h2 class="text">
@@ -60,7 +60,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-sm-5">
-                <img src="/images/13.jpg" alt="I'm the only model I have." class="img-fluid rounded" width="350">
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/243/original/17.jpg?1682106237" alt="I'm the only model I have." class="img-fluid rounded" width="350">
             </div>
             <div class="col-sm-7 mt-3">
                 <h2 class="text">
@@ -73,7 +73,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-sm-5">
-                <img src="/images/15.jpg" alt="I do this when I'm bored." class="img-fluid rounded" width="350">
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/241/original/15.jpg?1682106154" alt="I do this when I'm bored." class="img-fluid rounded" width="350">
             </div>
             <div class="col-sm-7 mt-3">
                 <h2 class="text">
