--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
   <div class="container animate__animated animate__fadeInUp">
     <div class="row">
       <div class="col-sm-5">
-        <img src="./images/profile.jpg" alt="profile" class="img-fluid rounded about-img" width="300">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/078/249/original/profile.jpg?1682106613" alt="profile" class="img-fluid rounded about-img" width="300">
       </div>
       <div class="col-sm-7">
         <p class="text">My favourite colour is green, and I love the multiples of three. I like to paint, write, read, watch anime and play video grames (wasd supremacy 4eva). My favourite thing to do is hang out with my wonderful dog, Jazz, on some afternoons, just before sunset. I have three fish as well: Alpha, Beta and Katara. And if I hear about the 'water is wet' argument ONE MORE TIME-</p>
