--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Philisizwe Kuzwayo</title>
     <meta name="description" content="A practice portfolio built by Philisizwe Kuzwayo for the SheCodes Responsive Workshop final project">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -14,20 +13,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Questrial&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top text">
     <div class="container-fluid">
-      <a class="navbar-brand text" href="/index.html">Philisizwe Kuzwayo</a>
+      <a class="navbar-brand text" href="index.html">Philisizwe Kuzwayo</a>
       <button class="navbar-toggler text" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-link text" href="/index.html">Home</a>
-          <a class="nav-link text" href="/about.html">About</a>
-          <a class="nav-link text" href="/gallery.html">Gallery</a>
-          <a class="nav-link text" href="/contact.html">Contact</a>
+            <a class="nav-link text" href="index.html">Home</a>
+          <a class="nav-link text" href="about.html">About</a>
+          <a class="nav-link text" href="gallery.html">Gallery</a>
+          <a class="nav-link text" href="contact.html">Contact</a>
         </div>
       </div>
     </div>
